--- a/app/src/main/res/layout/content_main_menu_handler.xml
+++ b/app/src/main/res/layout/content_main_menu_handler.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton"
-        android:src="C:/Users/AlbinSkola/AndroidStudioProjects/FitnessProject/app/src/icons/placeholder.jpg"
+        android:src="@drawable/placeholder"
         android:layout_marginLeft="50px"
         />
 
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton2"
-        android:src="C:/Users/AlbinSkola/AndroidStudioProjects/FitnessProject/app/src/icons/placeholder.jpg"
+        android:src="@drawable/placeholder"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton4"
-        android:src="C:/Users/AlbinSkola/AndroidStudioProjects/FitnessProject/app/src/icons/placeholder.jpg"
+        android:src="@drawable/placeholder"
         android:layout_marginTop="320px"
         android:layout_alignLeft="@+id/imageButton"
         android:layout_alignStart="@+id/imageButton" />
@@ -43,7 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton5"
-        android:src="C:/Users/AlbinSkola/AndroidStudioProjects/FitnessProject/app/src/icons/placeholder.jpg"
+        android:src="@drawable/placeholder"
         android:layout_alignTop="@+id/imageButton4"
         android:layout_alignLeft="@+id/imageButton2"
         android:layout_alignStart="@+id/imageButton2" />
@@ -52,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton6"
-        android:src="C:/Users/AlbinSkola/AndroidStudioProjects/FitnessProject/app/src/icons/placeholder.jpg"
+        android:src="@drawable/placeholder"
         android:layout_marginTop="640px"
         android:layout_alignLeft="@+id/imageButton4"
         android:layout_alignStart="@+id/imageButton4" />
@@ -61,7 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton7"
-        android:src="C:/Users/AlbinSkola/AndroidStudioProjects/FitnessProject/app/src/icons/placeholder.jpg"
+        android:src="@drawable/placeholder"
         android:layout_alignTop="@+id/imageButton6"
         android:layout_alignLeft="@+id/imageButton5"
         android:layout_alignStart="@+id/imageButton5" />
