New placeholder icons and placeholder icons added in the corresponding XML

--- a/app/src/main/res/layout/content_main_menu_handler.xml
+++ b/app/src/main/res/layout/content_main_menu_handler.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageAdd"
-        android:src="@drawable/placeholder"
+        android:src="@drawable/add"
         android:layout_marginLeft="50px"
         android:onClick="onClickAdd"
         android:background="#00ffffff" />
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
-        android:src="@drawable/placeholder"
+        android:src="@drawable/view"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
@@ -58,7 +58,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageProfile"
-        android:src="@drawable/placeholder"
+        android:src="@drawable/profile"
         android:onClick="onClickProfile"
         android:background="#00ffffff"
         android:layout_below="@+id/textView2"
@@ -80,7 +80,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageStats"
-        android:src="@drawable/placeholder"
+        android:src="@drawable/stats"
         android:layout_alignTop="@+id/imageProfile"
         android:layout_alignLeft="@+id/imageView"
         android:layout_alignStart="@+id/imageView"
@@ -101,7 +101,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageTips"
-        android:src="@drawable/placeholder"
+        android:src="@drawable/tips"
         android:onClick="onClickTips"
         android:background="#00ffffff"
         android:layout_below="@+id/textView4"
@@ -122,7 +122,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageLeftover"
-        android:src="@drawable/placeholder"
+        android:src="@drawable/leftover"
         android:layout_alignTop="@+id/imageTips"
         android:layout_alignLeft="@+id/imageStats"
         android:layout_alignStart="@+id/imageStats"
