--- a/app/src/main/res/layout/activity_view_workout_handler.xml
+++ b/app/src/main/res/layout/activity_view_workout_handler.xml
@@ -9,12 +9,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.albinskola.fitnessproject.ViewWorkoutHandler">
 
-    <ListView
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/listView"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/textView"
+        android:text="HEJ"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:choiceMode="singleChoice" />
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
