--- a/app/src/main/res/layout/content_statistics_handler.xml
+++ b/app/src/main/res/layout/content_statistics_handler.xml
@@ -12,4 +12,14 @@
     tools:context="com.example.albinskola.fitnessproject.StatisticsHandler"
     tools:showIn="@layout/activity_statistics_handler">
 
+    <com.jjoe64.graphview.GraphView
+        android:layout_width="match_parent"
+        android:layout_height="200dip"
+        android:id="@+id/graph"
+        
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="95dp" />
+
 </RelativeLayout>
