--- a/app/src/main/res/layout/content_statistics_handler.xml
+++ b/app/src/main/res/layout/content_statistics_handler.xml
@@ -12,14 +12,44 @@
     tools:context="com.example.albinskola.fitnessproject.StatisticsHandler"
     tools:showIn="@layout/activity_statistics_handler">
 
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/scrollView"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true">
+
+    </ScrollView>
+
     <com.jjoe64.graphview.GraphView
         android:layout_width="match_parent"
         android:layout_height="200dip"
         android:id="@+id/graph"
-        
-        android:layout_alignParentBottom="true"
+
+        android:layout_marginBottom="79dp"
+        android:layout_alignBottom="@+id/scrollView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/DisplayWorkoutAmount"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/scrollView"
+        android:layout_toEndOf="@+id/scrollView"
+        android:layout_marginLeft="300dp"
+        android:layout_marginTop="50dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Amount of workouts:"
+        android:id="@+id/textView8"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="95dp" />
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="150dp" />
 
 </RelativeLayout>
