--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#447183</color>
     <color name="colorPrimaryDark">#78A4B6</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#78A4B6</color>
 </resources>
